--- a/sale.html
+++ b/sale.html
@@ -135,7 +135,7 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <div id="offline" class="alert alert-danger alert-dismissible" hidden>
+            <div id="offline" class="alert alert-danger alert-dismissible">
               <button type="button" class="close" onclick="dismiss()">&times;</button>
               <strong>แจ้งเตือน!</strong> อินเทอเน็ตขาดการเชื่อมต่อ.
             </div>
